chore: prevent v3 of overlays

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -12,7 +12,8 @@
       "prerelease": true
     },
     "packages/overlays": {
-      "prerelease": true
+      "prerelease": true,
+      "release-as": "2.2.0-pink-lizard"
     },
     "packages/presentation": {
       "prerelease": true
