chore: force groq-store version

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -6,7 +6,8 @@
       "prerelease": true
     },
     "packages/groq-store": {
-      "prerelease": true
+      "prerelease": true,
+      "release-as": "5.2.0-pink-lizard"
     },
     "packages/nuxt-loader": {
       "prerelease": true
