fix(deps): update dependency `@sanity/client` to v6.8.0-pink-lizard.5

--- a/apps/svelte/package.json
+++ b/apps/svelte/package.json
@@ -14,7 +14,7 @@
   "devDependencies": {
     "@fontsource/fira-mono": "^5.0.8",
     "@neoconfetti/svelte": "^1.0.0",
-    "@sanity/client": "6.7.1",
+    "@sanity/client": "6.8.0-pink-lizard.5",
     "@sanity/overlays": "workspace:*",
     "@sanity/presentation": "workspace:*",
     "@sanity/svelte-loader": "workspace:*",
