feat: add placeholder package

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -18,6 +18,10 @@
     "packages/presentation": {
       "prerelease": true
     },
+    "packages/preview-url-secret": {
+      "release-as": "0.1.0-pink-lizard",
+      "prerelease": true
+    },
     "packages/react-loader": {
       "prerelease": true
     },
