chore(ci): minify builds on the CI, not locally

--- a/turbo.json
+++ b/turbo.json
@@ -4,6 +4,7 @@
   "globalEnv": ["RUNNER_OS"],
   "pipeline": {
     "build": {
+      "env": ["GITHUB_ACTIONS"],
       "outputs": ["dist/**"],
       "dependsOn": ["^build"]
     },
