fix: add types for async preview url resolver API

--- a/packages/presentation/package.json
+++ b/packages/presentation/package.json
@@ -115,6 +115,7 @@
   "dependencies": {
     "@sanity/groq-store": "workspace:*",
     "@sanity/icons": "^2.7.0",
+    "@sanity/preview-url-secret": "workspace:*",
     "@sanity/ui": "^1.9.0",
     "@types/lodash.isequal": "^4.5.8",
     "lodash.isequal": "^4.5.0",
