chore: fix build

--- a/packages/presentation/tsconfig.json
+++ b/packages/presentation/tsconfig.json
@@ -9,6 +9,6 @@
       "@sanity/preview-url-secret": ["../preview-url-secret/src"]
     }
   },
-  "include": ["**/*.ts", "**/*.tsx", "../groq-store/src", "../preview-url-secret/src"],
+  "include": ["**/*.ts", "**/*.tsx", "../groq-store/src", "../preview-url-secret/src", "../preview-url-secret/legacy"],
   "exclude": ["dist", "node_modules"]
 }
