--- a/packages/presentation/package.json
+++ b/packages/presentation/package.json
@@ -120,7 +120,8 @@
     "@types/lodash.isequal": "^4.5.8",
     "lodash.isequal": "^4.5.0",
     "mendoza": "3.0.3",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "suspend-react": "0.1.3"
   },
   "devDependencies": {
     "@sanity/client": "6.8.0-pink-lizard.12",
