feat: first mvp of Draft Mode handling

--- a/apps/studio/tsconfig.json
+++ b/apps/studio/tsconfig.json
@@ -16,7 +16,8 @@
     "jsx": "preserve",
     "incremental": true,
     "paths": {
-      "@sanity/presentation": ["../../packages/presentation/src"]
+      "@sanity/presentation": ["../../packages/presentation/src"],
+      "@sanity/preview-url-secret": ["../../packages/preview-url-secret/src"]
     }
   },
   "include": ["**/*.ts", "**/*.tsx"],
