--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -15,6 +15,7 @@
     "@sanity/image-url": "^1.0.2",
     "@sanity/overlays": "workspace:*",
     "@sanity/react-loader": "workspace:*",
+    "@sanity/preview-url-secret": "workspace:*",
     "@types/node": "20.8.7",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
