fix(deps): update dependency nanostores to v0.9.5

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -52,6 +52,10 @@
       "groupSlug": "pink-lizard",
       "automerge": true,
       "semanticCommitType": "fix"
+    },
+    {
+      "matchDepNames": ["nanostores", "@nanostores/vue"],
+      "semanticCommitType": "fix"
     }
   ]
 }
