--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@next/bundle-analyzer": "14.0.2",
     "@portabletext/react": "^3.0.11",
-    "@sanity/client": "6.8.0-pink-lizard.12",
+    "@sanity/client": "^6.8.0",
     "@sanity/image-url": "^1.0.2",
     "@sanity/overlays": "workspace:*",
     "@sanity/preview-url-secret": "workspace:*",
