--- a/packages/preview-url-secret/package.json
+++ b/packages/preview-url-secret/package.json
@@ -130,7 +130,7 @@
     "root": true
   },
   "devDependencies": {
-    "@sanity/client": "6.8.0-pink-lizard.12",
+    "@sanity/client": "^6.8.0",
     "@sanity/pkg-utils": "^3.2.3",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
@@ -142,7 +142,7 @@
     "typescript": "^5.2.2"
   },
   "peerDependencies": {
-    "@sanity/client": "6.8.0-pink-lizard.12"
+    "@sanity/client": "^6.8.0"
   },
   "engines": {
     "node": ">=18"
