--- a/packages/react-loader/package.json
+++ b/packages/react-loader/package.json
@@ -131,7 +131,7 @@
     "@sanity/core-loader": "workspace:*"
   },
   "devDependencies": {
-    "@sanity/client": "6.8.0-pink-lizard.12",
+    "@sanity/client": "^6.8.0",
     "@sanity/pkg-utils": "^3.2.3",
     "@types/react": "^18.2.37",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
@@ -146,7 +146,7 @@
     "visual-editing-helpers": "workspace:*"
   },
   "peerDependencies": {
-    "@sanity/client": "6.8.0-pink-lizard.12",
+    "@sanity/client": "^6.8.0",
     "react": "^18.2.0"
   },
   "engines": {
