fix(deps): Update dependency valibot to 0.20.1

--- a/packages/visual-editing-helpers/package.json
+++ b/packages/visual-editing-helpers/package.json
@@ -118,12 +118,12 @@
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "sanity": "3.19.3-pink-lizard.18",
     "typescript": "^5.2.2",
-    "valibot": "^0.20.1",
+    "valibot": "0.20.1",
     "vitest": "^0.34.6"
   },
   "peerDependencies": {
     "@sanity/client": "^6.8.0",
-    "valibot": "^0.20.0"
+    "valibot": "0.20.1"
   },
   "peerDependenciesMeta": {
     "valibot": {
