--- a/packages/preview-url-secret/package.json
+++ b/packages/preview-url-secret/package.json
@@ -130,6 +130,7 @@
     "root": true
   },
   "devDependencies": {
+    "@edge-runtime/types": "^2.2.7",
     "@sanity/client": "^6.8.0",
     "@sanity/pkg-utils": "^3.2.3",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
