feat: generate secrets on demand

--- a/packages/preview-url-secret/package.json
+++ b/packages/preview-url-secret/package.json
@@ -151,5 +151,8 @@
   "publishConfig": {
     "access": "public",
     "tag": "pink-lizard"
+  },
+  "dependencies": {
+    "@sanity/uuid": "3.0.2"
   }
 }
