--- a/packages/presentation/package.json
+++ b/packages/presentation/package.json
@@ -118,6 +118,7 @@
     "@sanity/preview-url-secret": "workspace:*",
     "@sanity/ui": "^1.9.0",
     "@types/lodash.isequal": "^4.5.8",
+    "framer-motion": "^10.16.4",
     "lodash.isequal": "^4.5.0",
     "mendoza": "3.0.3",
     "rxjs": "^7.8.1",
