fix: export `rsc` correctly

--- a/packages/react-loader/package.json
+++ b/packages/react-loader/package.json
@@ -61,7 +61,7 @@
         "./dist/jsx.d.ts"
       ],
       "rsc": [
-        "./dist/rsc.d.ts"
+        "./dist/rsc/index.d.ts"
       ]
     }
   },
