--- a/packages/overlays/package.json
+++ b/packages/overlays/package.json
@@ -111,6 +111,7 @@
     "root": true
   },
   "dependencies": {
+    "@sanity/client": "^6.8.4",
     "@sanity/ui": "^1.9.3",
     "@vercel/stega": "0.1.0",
     "react": "^18.2.0",
