chore: test using `latest`

--- a/packages/presentation/package.json
+++ b/packages/presentation/package.json
@@ -130,7 +130,7 @@
     "channels": "workspace:*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sanity": "3.19.3-pink-lizard.21",
+    "sanity": "^3.19.2",
     "styled-components": "6.1.1",
     "typescript": "^5.2.2",
     "visual-editing-helpers": "workspace:*",
@@ -140,7 +140,7 @@
     "@sanity/client": "^6.8.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sanity": "3.19.3-pink-lizard.21",
+    "sanity": "^3.19.2",
     "styled-components": "^6.1.1"
   },
   "engines": {
