--- a/packages/visual-editing-helpers/package.json
+++ b/packages/visual-editing-helpers/package.json
@@ -109,14 +109,14 @@
   },
   "devDependencies": {
     "@sanity/client": "^6.8.5",
-    "@sanity/util": "3.19.3-pink-lizard.21",
+    "@sanity/util": "^3.19.2",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@typescript-eslint/parser": "^6.11.0",
     "eslint": "^8.53.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "sanity": "3.19.3-pink-lizard.21",
+    "sanity": "^3.19.2",
     "typescript": "^5.2.2",
     "valibot": "0.20.1",
     "vitest": "^0.34.6"
