--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -29,6 +29,7 @@
       "matchDepNames": [
         "@sanity/block-tools",
         "@sanity/cli",
+        "@sanity/client",
         "@sanity/diff",
         "@sanity/export",
         "@sanity/import",
@@ -45,11 +46,9 @@
       ],
       "matchFileNames": ["package.json", "packages/**/package.json"],
       "matchDepTypes": ["dependencies", "devDependencies", "peerDependencies"],
-      "followTag": "pink-lizard",
       "schedule": ["at any time"],
-      "rangeStrategy": "pin",
-      "groupSlug": "pink-lizard",
-      "automerge": true,
+      "rangeStrategy": "bump",
+      "groupSlug": "sanity-monorepo",
       "semanticCommitType": "fix"
     },
     {
