--- a/package.json
+++ b/package.json
@@ -22,21 +22,21 @@
     "singleQuote": true
   },
   "dependencies": {
-    "@sanity/block-tools": "3.19.3-pink-lizard.21",
-    "@sanity/cli": "3.19.3-pink-lizard.21",
-    "@sanity/diff": "3.19.3-pink-lizard.21",
-    "@sanity/export": "3.19.3-pink-lizard.21",
-    "@sanity/import": "3.19.3-pink-lizard.21",
-    "@sanity/import-cli": "3.19.3-pink-lizard.21",
-    "@sanity/mutator": "3.19.3-pink-lizard.21",
-    "@sanity/portable-text-editor": "3.19.3-pink-lizard.21",
-    "@sanity/schema": "3.19.3-pink-lizard.21",
-    "@sanity/types": "3.19.3-pink-lizard.21",
-    "@sanity/util": "3.19.3-pink-lizard.21",
-    "@sanity/vision": "3.19.3-pink-lizard.21",
-    "create-sanity": "3.19.3-pink-lizard.21",
-    "groq": "3.19.3-pink-lizard.21",
-    "sanity": "3.19.3-pink-lizard.21",
+    "@sanity/block-tools": "^3.19.2",
+    "@sanity/cli": "^3.19.2",
+    "@sanity/diff": "^3.19.2",
+    "@sanity/export": "^3.19.2",
+    "@sanity/import": "^3.19.2",
+    "@sanity/import-cli": "^3.19.2",
+    "@sanity/mutator": "^3.19.2",
+    "@sanity/portable-text-editor": "^3.19.2",
+    "@sanity/schema": "^3.19.2",
+    "@sanity/types": "^3.19.2",
+    "@sanity/util": "^3.19.2",
+    "@sanity/vision": "^3.19.2",
+    "create-sanity": "^3.19.2",
+    "groq": "^3.19.2",
+    "sanity": "^3.19.2",
     "styled-components": "6.1.1"
   },
   "devDependencies": {
