--- a/apps/studio/package.json
+++ b/apps/studio/package.json
@@ -12,6 +12,7 @@
     "@sanity/vision": "3.19.3",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
+    "@vercel/stega": "0.1.0",
     "apps-common": "workspace:*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
