fix: remove `release-as` overrides

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -3,29 +3,13 @@
   "bump-minor-pre-major": true,
   "plugins": ["node-workspace"],
   "packages": {
-    "packages/core-loader": {
-      "release-as": "1.0.0"
-    },
-    "packages/groq-store": {
-      "release-as": "5.0.0-experimental"
-    },
-    "packages/nuxt-loader": {
-      "release-as": "1.0.0"
-    },
-    "packages/overlays": {
-      "release-as": "2.0.0"
-    },
-    "packages/presentation": {
-      "release-as": "1.0.0"
-    },
-    "packages/preview-url-secret": {
-      "release-as": "1.0.0"
-    },
-    "packages/react-loader": {
-      "release-as": "1.0.0"
-    },
-    "packages/svelte-loader": {
-      "release-as": "1.0.0"
-    }
+    "packages/core-loader": {},
+    "packages/groq-store": {},
+    "packages/nuxt-loader": {},
+    "packages/overlays": {},
+    "packages/presentation": {},
+    "packages/preview-url-secret": {},
+    "packages/react-loader": {},
+    "packages/svelte-loader": {}
   }
 }
