--- a/release-please-config.json
+++ b/release-please-config.json
@@ -8,6 +8,9 @@
     "packages/nuxt-loader": {},
     "packages/overlays": {},
     "packages/presentation": {},
+    "packages/preview-kit-compat": {
+      "release-as": "1.0.0"
+    },
     "packages/preview-url-secret": {},
     "packages/react-loader": {},
     "packages/svelte-loader": {}
