chore: put presentation deps in separate group

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -56,6 +56,7 @@
       "matchDepTypes": ["devDependencies", "peerDependencies"],
       "schedule": ["at any time"],
       "rangeStrategy": "bump",
+      "groupSlug": "sanity-presentation",
       "semanticCommitType": "chore"
     },
     {
