--- a/apps/page-builder-demo/package.json
+++ b/apps/page-builder-demo/package.json
@@ -25,6 +25,7 @@
     "clsx": "^2.0.0",
     "eslint": "^8.53.0",
     "eslint-config-next": "14.0.2",
+    "groq": "^3.20.0",
     "next": "14.0.2",
     "postcss": "8.4.31",
     "react": "^18.2.0",
