--- a/packages/presentation/package.json
+++ b/packages/presentation/package.json
@@ -141,7 +141,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sanity": "^3.20.0",
-    "styled-components": "^6.1.1"
+    "styled-components": "^5.2 || ^6.1.1"
   },
   "engines": {
     "node": ">=16.14"
