feat: add `debugSecrets`  studio plugin that lets you easily see the generated url secrets in your dataset

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -27,11 +27,11 @@
     },
     {
       "matchDepNames": ["sanity"],
-      "matchFileNames": ["packages/presentation/package.json"],
+      "matchFileNames": ["packages/presentation/package.json","packages/preview-url-secret/package.json"],
       "matchDepTypes": ["devDependencies", "peerDependencies"],
       "schedule": ["at any time"],
       "rangeStrategy": "bump",
-      "groupSlug": "sanity-presentation",
+      "groupSlug": "sanity",
       "semanticCommitType": "chore"
     },
     {
