--- a/apps/studio/package.json
+++ b/apps/studio/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@sanity/assist": "^1.2.15",
     "@sanity/presentation": "workspace:*",
+    "@sanity/preview-url-secret": "workspace:*",
     "@sanity/ui": "^1.9.3",
     "@sanity/vision": "3.20.0",
     "@types/react": "^18.2.37",
