refactor(types): prepare adding types tests with vitest

--- a/packages/react-loader/package.json
+++ b/packages/react-loader/package.json
@@ -158,7 +158,8 @@
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "react": "^18.2.0",
     "typescript": "^5.2.2",
-    "visual-editing-helpers": "workspace:*"
+    "visual-editing-helpers": "workspace:*",
+    "vitest": "^0.34.6"
   },
   "peerDependencies": {
     "@sanity/client": "^6.8.6",
