chore: include nuxt

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -38,7 +38,7 @@
       "semanticCommitType": "chore"
     },
     {
-      "matchDepNames": ["@sanity/client", "nanostores", "@nanostores/vue"],
+      "matchDepNames": ["@sanity/client", "nanostores", "@nanostores/vue", "nuxt"],
       "semanticCommitType": "fix"
     }
   ]
