feat: add new `same-origin` option

--- a/packages/channels/tsconfig.json
+++ b/packages/channels/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "composite": true,
     "declarationDir": "./dist/dts",
     "outDir": "./dist/dts",
     "incremental": true,
