--- a/packages/channels/package.json
+++ b/packages/channels/package.json
@@ -15,7 +15,8 @@
   ],
   "scripts": {
     "lint": "eslint .",
-    "test": "vitest --pass-with-no-tests"
+    "test": "vitest --pass-with-no-tests",
+    "typecheck": "vitest typecheck --pass-with-no-tests --run"
   },
   "prettier": {
     "plugins": [
@@ -83,7 +84,8 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "typescript": "^5.3.2"
+    "typescript": "^5.3.2",
+    "vitest": "^0.34.6"
   },
   "engines": {
     "node": ">=18"
