--- a/packages/nuxt-loader/package.json
+++ b/packages/nuxt-loader/package.json
@@ -41,6 +41,7 @@
   },
   "files": [
     "dist",
+    "src",
     "CHANGELOG.md"
   ],
   "scripts": {
@@ -48,7 +49,8 @@
     "build": "pkg build --strict && pkg --strict",
     "lint": "eslint .",
     "prepublishOnly": "pnpm build",
-    "test": "tsc --noEmit",
+    "test": "vitest --pass-with-no-tests",
+    "typecheck": "vitest typecheck --pass-with-no-tests --run",
     "watch": "pkg watch --strict"
   },
   "browserslist": [
@@ -127,6 +129,7 @@
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "nuxt": "^3.8.2",
     "typescript": "^5.3.2",
+    "vitest": "^0.34.6",
     "vue": "^3.3.9"
   },
   "peerDependencies": {
