--- a/packages/overlays/package.json
+++ b/packages/overlays/package.json
@@ -34,6 +34,7 @@
   "types": "./dist/index.d.ts",
   "files": [
     "dist",
+    "src",
     "CHANGELOG.md"
   ],
   "scripts": {
@@ -42,6 +43,7 @@
     "lint": "eslint .",
     "prepublishOnly": "pnpm build",
     "test": "vitest --pass-with-no-tests",
+    "typecheck": "vitest typecheck --pass-with-no-tests --run",
     "watch": "pkg watch --strict"
   },
   "browserslist": [
@@ -134,6 +136,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
+    "happy-dom": "^12.10.3",
     "ls-engines": "^0.9.1",
     "rimraf": "^5.0.5",
     "typescript": "^5.3.2",
