--- a/packages/presentation/package.json
+++ b/packages/presentation/package.json
@@ -43,6 +43,7 @@
     "lint": "eslint .",
     "prepublishOnly": "pnpm build",
     "test": "vitest --pass-with-no-tests",
+    "typecheck": "vitest typecheck --pass-with-no-tests --run",
     "watch": "pkg watch --strict"
   },
   "browserslist": [
@@ -129,6 +130,7 @@
     "@sanity/client": "^6.9.1",
     "@sanity/pkg-utils": "^3.3.2",
     "@sanity/visual-editing-helpers": "workspace:*",
+    "happy-dom": "^12.10.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sanity": "^3.20.2",
