--- a/packages/react-loader/package.json
+++ b/packages/react-loader/package.json
@@ -67,6 +67,7 @@
   },
   "files": [
     "dist",
+    "src",
     "CHANGELOG.md"
   ],
   "scripts": {
@@ -75,7 +76,8 @@
     "dev": "pkg watch --strict",
     "lint": "eslint .",
     "prepublishOnly": "pnpm build",
-    "typecheck": "vitest typecheck --run"
+    "test": "vitest --pass-with-no-tests",
+    "typecheck": "vitest typecheck --pass-with-no-tests --run"
   },
   "browserslist": [
     "> 0.2% and last 2 versions and supports es6-module and supports es6-module-dynamic-import and not dead and not IE 11",
