--- a/packages/svelte-loader/package.json
+++ b/packages/svelte-loader/package.json
@@ -34,6 +34,7 @@
   "types": "./dist/index.d.ts",
   "files": [
     "dist",
+    "src",
     "CHANGELOG.md"
   ],
   "scripts": {
@@ -41,7 +42,8 @@
     "build": "pkg build --strict && pkg --strict",
     "lint": "eslint .",
     "prepublishOnly": "pnpm build",
-    "test": "tsc --noEmit",
+    "test": "vitest --pass-with-no-tests",
+    "typecheck": "vitest typecheck --pass-with-no-tests --run",
     "watch": "pkg watch --strict"
   },
   "browserslist": [
@@ -117,7 +119,8 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "typescript": "^5.3.2"
+    "typescript": "^5.3.2",
+    "vitest": "^0.34.6"
   },
   "peerDependencies": {
     "@sanity/client": "^6.9.1"
