refactor: namespace private packages

--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next/bundle-analyzer": "14.0.3",
     "@portabletext/react": "^3.0.11",
+    "@sanity/channels": "workspace:*",
     "@sanity/client": "^6.9.1",
     "@sanity/image-url": "^1.0.2",
     "@sanity/overlays": "workspace:*",
@@ -23,7 +24,6 @@
     "@vercel/stega": "0.1.0",
     "apps-common": "workspace:*",
     "autoprefixer": "10.4.16",
-    "channels": "workspace:*",
     "eslint": "^8.55.0",
     "eslint-config-next": "14.0.3",
     "next": "14.0.3",
