--- a/apps/nuxt/package.json
+++ b/apps/nuxt/package.json
@@ -10,12 +10,12 @@
   },
   "dependencies": {
     "@nuxtjs/tailwindcss": "^6.10.1",
+    "@sanity/channels": "workspace:*",
     "@sanity/client": "^6.9.1",
     "@sanity/nuxt-loader": "workspace:*",
     "@sanity/overlays": "workspace:*",
     "@sanity/presentation": "workspace:*",
     "apps-common": "workspace:*",
-    "channels": "workspace:*",
     "rxjs": "^7.8.1",
     "sanity": "3.20.2"
   },
