--- a/apps/remix/tsconfig.json
+++ b/apps/remix/tsconfig.json
@@ -30,8 +30,10 @@
       "@sanity/core-loader": ["../../packages/core-loader/src"],
       "@sanity/react-loader": ["../../packages/react-loader/src"],
       "@sanity/react-loader/jsx": ["../../packages/react-loader/src/jsx"],
-      "visual-editing-helpers": ["../../packages/visual-editing-helpers/src"],
-      "visual-editing-helpers/csm": [
+      "@sanity/visual-editing-helpers": [
+        "../../packages/visual-editing-helpers/src"
+      ],
+      "@sanity/visual-editing-helpers/csm": [
         "../../packages/visual-editing-helpers/src/csm"
       ]
     },
