--- a/packages/nuxt-loader/tsconfig.json
+++ b/packages/nuxt-loader/tsconfig.json
@@ -6,8 +6,8 @@
     "strictNullChecks": true,
     "paths": {
       "@sanity/core-loader": ["../core-loader/src"],
-      "visual-editing-helpers": ["../visual-editing-helpers/src"],
-      "visual-editing-helpers/*": ["../visual-editing-helpers/src/*"]
+      "@sanity/visual-editing-helpers": ["../visual-editing-helpers/src"],
+      "@sanity/visual-editing-helpers/*": ["../visual-editing-helpers/src/*"]
     }
   },
   "include": [
