--- a/packages/presentation/tsconfig.json
+++ b/packages/presentation/tsconfig.json
@@ -7,8 +7,8 @@
     "paths": {
       "@sanity/groq-store": ["../groq-store/src"],
       "@sanity/preview-url-secret": ["../preview-url-secret/src"],
-      "channels": ["../channels/src"],
-      "visual-editing-helpers": ["../visual-editing-helpers/src"]
+      "@sanity/channels": ["../channels/src"],
+      "@sanity/visual-editing-helpers": ["../visual-editing-helpers/src"]
     }
   },
   "include": [
