--- a/packages/visual-editing-helpers/package.json
+++ b/packages/visual-editing-helpers/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "visual-editing-helpers",
+  "name": "@sanity/visual-editing-helpers",
   "version": "0.0.0",
   "private": true,
   "license": "MIT",
