--- a/apps/remix/package.json
+++ b/apps/remix/package.json
@@ -13,13 +13,13 @@
     "@remix-run/node": "^1.19.3",
     "@remix-run/react": "^1.19.3",
     "@remix-run/vercel": "^1.19.3",
+    "@sanity/channels": "workspace:*",
     "@sanity/image-url": "^1.0.2",
     "@sanity/overlays": "workspace:*",
     "@sanity/react-loader": "workspace:*",
     "@vercel/node": "^3.0.11",
     "@vercel/stega": "0.1.0",
     "apps-common": "workspace:*",
-    "channels": "workspace:*",
     "isbot": "^3.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
