--- a/packages/core-loader/package.json
+++ b/packages/core-loader/package.json
@@ -125,18 +125,18 @@
     "async-cache-dedupe": "2.0.0"
   },
   "devDependencies": {
+    "@sanity/channels": "workspace:*",
     "@sanity/client": "^6.9.1",
     "@sanity/pkg-utils": "^3.3.2",
+    "@sanity/visual-editing-helpers": "workspace:*",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
-    "channels": "workspace:*",
     "eslint": "^8.55.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "nanostores": "0.9.5",
-    "typescript": "^5.3.2",
-    "visual-editing-helpers": "workspace:*"
+    "typescript": "^5.3.2"
   },
   "peerDependencies": {
     "@sanity/client": "^6.9.1"
