--- a/packages/overlays/package.json
+++ b/packages/overlays/package.json
@@ -121,12 +121,13 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@sanity/channels": "workspace:*",
     "@sanity/pkg-utils": "^3.3.2",
+    "@sanity/visual-editing-helpers": "workspace:*",
     "@types/react": "^18.2.41",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
-    "channels": "workspace:*",
     "eslint": "^8.55.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.0.1",
@@ -136,7 +137,6 @@
     "ls-engines": "^0.9.1",
     "rimraf": "^5.0.5",
     "typescript": "^5.3.2",
-    "visual-editing-helpers": "workspace:*",
     "vitest": "^0.34.6"
   },
   "engines": {
