--- a/packages/presentation/package.json
+++ b/packages/presentation/package.json
@@ -125,15 +125,15 @@
     "suspend-react": "0.1.3"
   },
   "devDependencies": {
+    "@sanity/channels": "workspace:*",
     "@sanity/client": "^6.9.1",
     "@sanity/pkg-utils": "^3.3.2",
-    "channels": "workspace:*",
+    "@sanity/visual-editing-helpers": "workspace:*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sanity": "^3.20.2",
     "styled-components": "6.1.1",
     "typescript": "^5.3.2",
-    "visual-editing-helpers": "workspace:*",
     "vitest": "^0.34.6"
   },
   "peerDependencies": {
