--- a/packages/preview-kit-compat/package.json
+++ b/packages/preview-kit-compat/package.json
@@ -109,19 +109,19 @@
     "root": true
   },
   "devDependencies": {
+    "@sanity/channels": "workspace:*",
     "@sanity/client": "^6.9.1",
     "@sanity/pkg-utils": "^3.3.2",
+    "@sanity/visual-editing-helpers": "workspace:*",
     "@types/react": "^18.2.41",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
-    "channels": "workspace:*",
     "eslint": "^8.55.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "react": "^18.2.0",
-    "typescript": "^5.3.2",
-    "visual-editing-helpers": "workspace:*"
+    "typescript": "^5.3.2"
   },
   "peerDependencies": {
     "@sanity/client": "^6.9.1",
