--- a/packages/preview-url-secret/package.json
+++ b/packages/preview-url-secret/package.json
@@ -176,12 +176,12 @@
   },
   "devDependencies": {
     "@edge-runtime/types": "^2.2.7",
+    "@sanity/channels": "workspace:*",
     "@sanity/client": "^6.9.1",
     "@sanity/icons": "^2.7.0",
     "@sanity/pkg-utils": "^3.3.2",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
-    "channels": "workspace:*",
     "eslint": "^8.55.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.0.1",
