--- a/packages/react-loader/package.json
+++ b/packages/react-loader/package.json
@@ -146,19 +146,19 @@
     "@sanity/core-loader": "workspace:*"
   },
   "devDependencies": {
+    "@sanity/channels": "workspace:*",
     "@sanity/client": "^6.9.1",
     "@sanity/pkg-utils": "^3.3.2",
+    "@sanity/visual-editing-helpers": "workspace:*",
     "@types/react": "^18.2.41",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
-    "channels": "workspace:*",
     "eslint": "^8.55.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "react": "^18.2.0",
     "typescript": "^5.3.2",
-    "visual-editing-helpers": "workspace:*",
     "vitest": "^0.34.6"
   },
   "peerDependencies": {
