--- a/packages/presentation/package.json
+++ b/packages/presentation/package.json
@@ -115,7 +115,7 @@
   "dependencies": {
     "@sanity/groq-store": "workspace:*",
     "@sanity/icons": "^2.7.0",
-    "@sanity/preview-url-secret": "workspace:*",
+    "@sanity/preview-url-secret": "workspace:^",
     "@sanity/ui": "^1.9.3",
     "@types/lodash.isequal": "^4.5.8",
     "framer-motion": "^10.16.12",
