refactor(release-please): use version scheme that supports the publish strat

--- a/packages/nuxt-loader/package.json
+++ b/packages/nuxt-loader/package.json
@@ -113,7 +113,7 @@
     "root": true
   },
   "dependencies": {
-    "@sanity/core-loader": "workspace:*"
+    "@sanity/core-loader": "1.0.3"
   },
   "devDependencies": {
     "@nanostores/vue": "0.10.0",
