--- a/packages/presentation/package.json
+++ b/packages/presentation/package.json
@@ -114,9 +114,9 @@
     "root": true
   },
   "dependencies": {
-    "@sanity/groq-store": "workspace:*",
+    "@sanity/groq-store": "5.0.2-experimental.0",
     "@sanity/icons": "^2.7.0",
-    "@sanity/preview-url-secret": "workspace:^",
+    "@sanity/preview-url-secret": "^1.2.1",
     "@sanity/ui": "^1.9.3",
     "@types/lodash.isequal": "^4.5.8",
     "framer-motion": "^10.16.12",
