--- a/packages/svelte-loader/package.json
+++ b/packages/svelte-loader/package.json
@@ -106,7 +106,7 @@
     "root": true
   },
   "dependencies": {
-    "@sanity/core-loader": "workspace:*"
+    "@sanity/core-loader": "1.0.3"
   },
   "devDependencies": {
     "@sanity/channels": "workspace:*",
