chore: setup release-as for it

--- a/packages/presentation/package.json
+++ b/packages/presentation/package.json
@@ -114,7 +114,7 @@
     "root": true
   },
   "dependencies": {
-    "@sanity/groq-store": "5.0.2-experimental.0",
+    "@sanity/groq-store": "5.0.2-experimental",
     "@sanity/icons": "^2.7.0",
     "@sanity/preview-url-secret": "^1.2.1",
     "@sanity/ui": "^1.9.3",
