--- a/release-please-config.json
+++ b/release-please-config.json
@@ -6,7 +6,8 @@
     "packages/core-loader": {},
     "packages/groq-store": {
       "prerelease": true,
-      "prerelease-type": "experimental"
+      "prerelease-type": "experimental",
+      "release-as": "5.0.3-experimental.0"
     },
     "packages/nuxt-loader": {},
     "packages/overlays": {},
