--- a/.github/workflows/release-please-workaround.yml
+++ b/.github/workflows/release-please-workaround.yml
@@ -3,6 +3,7 @@ name: Workaround release-please not updating pnpm-lock.yml
 
 on:
   pull_request:
+    types: [opened, reopened, synchronize, reopened]
     branches: ['release-please--**']
 
 concurrency:
@@ -36,4 +37,3 @@ jobs:
         with:
           default_author: github_actions
           message: 'chore(pnpm): update lockfile'
- 
