--- a/.github/workflows/release-please-workaround.yml
+++ b/.github/workflows/release-please-workaround.yml
@@ -5,6 +5,8 @@ on:
   pull_request:
     types: [opened, reopened, synchronize]
     branches: ['main']
+    paths-ignore:
+      - 'pnpm-lock.yml'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
