chore: migrate to v1

--- a/apps/remix/package.json
+++ b/apps/remix/package.json
@@ -4,8 +4,7 @@
   "sideEffects": false,
   "scripts": {
     "build": "remix build",
-    "dev": "remix dev --sourcemap",
-    "typecheck": "tsc"
+    "dev": "remix dev --sourcemap"
   },
   "dependencies": {
     "@portabletext/react": "^3.0.11",
