--- a/packages/core-loader/package.json
+++ b/packages/core-loader/package.json
@@ -59,8 +59,7 @@
     "build": "pkg build --strict && pkg --strict",
     "lint": "eslint .",
     "prepublishOnly": "pnpm build",
-    "test": "vitest --pass-with-no-tests",
-    "typecheck": "vitest typecheck --pass-with-no-tests --run",
+    "test": "vitest --pass-with-no-tests --typecheck",
     "watch": "pkg watch --strict"
   },
   "browserslist": [
