--- a/packages/react-loader/package.json
+++ b/packages/react-loader/package.json
@@ -76,8 +76,7 @@
     "dev": "pkg watch --strict",
     "lint": "eslint .",
     "prepublishOnly": "pnpm build",
-    "test": "vitest --pass-with-no-tests",
-    "typecheck": "vitest typecheck --pass-with-no-tests --run"
+    "test": "vitest --pass-with-no-tests --typecheck"
   },
   "browserslist": [
     "> 0.2% and last 2 versions and supports es6-module and supports es6-module-dynamic-import and not dead and not IE 11",
