--- a/apps/svelte/package.json
+++ b/apps/svelte/package.json
@@ -26,10 +26,15 @@
     "apps-common": "workspace:*",
     "eslint": "^8.55.0",
     "eslint-plugin-svelte": "^2.35.1",
+    "postcss": "8.4.32",
     "svelte": "^4.2.8",
     "svelte-check": "^3.6.2",
+    "tailwindcss": "^3.3.5",
     "tslib": "^2.6.2",
     "typescript": "^5.3.2",
     "vite": "^5.0.5"
+  },
+  "dependencies": {
+    "@sanity/image-url": "^1.0.2"
   }
 }
