chore: remove `release-as` workaround

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -6,8 +6,7 @@
     "packages/core-loader": {},
     "packages/groq-store": {
       "prerelease": true,
-      "prerelease-type": "experimental",
-      "release-as": "5.0.0-experimental.0"
+      "prerelease-type": "experimental"
     },
     "packages/nuxt-loader": {},
     "packages/overlays": {},
