chore: no longer a pre-release

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -5,8 +5,7 @@
   "packages": {
     "packages/core-loader": {},
     "packages/groq-store": {
-      "prerelease": true,
-      "prerelease-type": "experimental"
+      "release-as": "5.3.0"
     },
     "packages/nuxt-loader": {},
     "packages/overlays": {},
